--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "pinki",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Asynchronous libraries wrapper",
-  "definition": "pinki promises",
+  "definition": "Pinky Promises",
   "homepage": "https://github.com/absolunet/pinki",
   "author": {
     "name": "Absolunet",
@@ -18,6 +18,7 @@
   },
   "main": "index.js",
   "ignore": [
+    "ressources",
     "test",
     ".editorconfig",
     ".eslintrc.yaml",
