--- a/.editorconfig
+++ b/.editorconfig
@@ -1,22 +1,24 @@
-# http://editorconfig.org
+# https://editorconfig.org
 
 root = true
 
-[*.js]
+[*.{css,less,scss,js,html,jshtml,md}]
 indent_style = tab
+end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.md]
-indent_style = tab
-charset = utf-8
-trim_trailing_whitespace = false
-insert_final_newline = true
-
-[{.editorconfig,.eslintrc.yaml,.gitignore,.npmignore,.travis.yaml,bower.json,package.json}]
+[*.{json,rb,yaml,yml}]
 indent_style = space
 indent_size = 2
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[{.editorconfig,.eslintignore,.gitignore,.npmignore}]
+end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
