--- a/package.json
+++ b/package.json
@@ -17,17 +17,25 @@
     "url": "https://github.com/absolunet/pinki/issues"
   },
   "engines": {
-    "node": ">= 10.3.0"
+    "node": ">= 10.6.0"
   },
+  "main": "dist/node.js",
   "scripts": {
+    "build": "node node_modules/webpack-cli/bin/cli.js",
     "test": "ava"
   },
   "devDependencies": {
-    "@absolunet/eslint-config-nwayo": "0.3.1",
-    "@absolunet/tester": "1.7.0"
+    "@absolunet/eslint-config-core": "1.0.0",
+    "@absolunet/tester": "1.7.1",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-preset-env": "1.7.0",
+    "lodash.merge": "4.6.1",
+    "webpack": "4.16.0",
+    "webpack-cli": "3.0.8"
   },
   "dependencies": {
     "pubsub-js": "^1.6.0",
-    "rsvp": "^4.8.2"
+    "rsvp": "^4.8.3"
   }
 }
