--- a/package.json
+++ b/package.json
@@ -21,18 +21,14 @@
   },
   "main": "dist/node.js",
   "scripts": {
-    "build": "node node_modules/webpack-cli/bin/cli.js",
+    "build": "node node_modules/@absolunet/library-builder/bin/build.js",
     "test": "ava"
   },
   "devDependencies": {
     "@absolunet/eslint-config-core": "1.0.0",
+    "@absolunet/library-builder": "0.0.1",
     "@absolunet/tester": "1.7.1",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-preset-env": "1.7.0",
-    "lodash.merge": "4.6.1",
-    "webpack": "4.16.0",
-    "webpack-cli": "3.0.8"
+    "lodash.merge": "4.6.1"
   },
   "dependencies": {
     "pubsub-js": "^1.6.0",
