Full conversion to webpack + Removal of bower

--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,11 @@
-bower_components
+.DS_Store
+lib
 ressources
-src
 test
-vendor
 .editorconfig
 .eslintignore
 .eslintrc.yaml
 .gitignore
 .travis.yml
-bower.json
+index.js
 webpack.config.js
