--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@absolunet/pinki",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Asynchronous libraries wrapper",
   "definition": "Pinky Promises",
   "homepage": "https://github.com/absolunet/pinki",
@@ -9,6 +9,7 @@
     "url": "https://absolunet.com"
   },
   "keywords": [
+    "browser",
     "deferred",
     "promise",
     "pubsub",
